--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500&display=swap');
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -17,6 +18,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	font-family: 'Poppins', sans-serif;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -25,6 +27,8 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	min-height: 100vh;
+background: #f3f0e5; 
 }
 ol, ul {
 	list-style: none;
@@ -41,6 +45,23 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
+.pgHeaderText{
+	text-align: center;
+	font-size: 46px;
+	font-weight: 800;
+	font-style: italic;
+	padding: 15px;
+	text-transform: uppercase;
+  background: linear-gradient(to right, #30cfd0 0%, #330867 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-family: "Poppins", sans-serif;
+}
+.baseContainer{
+	width: 100%;
+	max-width: 600px;
+	margin: 0 auto;
+	border: 1px solid #f00;
+}
 
 
